RIA-8860 Merge with master (#2105)
* DIAC-219 added CSV redactor (#1914)

* DIAC-219 updating python script for redacting data from CSV to now account for JSONS within the CSV (#1921)

* DIAC-211 Updating parties class (#1901)

* SNI-5296 Updating parties class

* SNI-5296 testing pods

* SNI-5296 testing pods

* SNI-5296-reverting changes to test fix

* DIAC-211 reverting preview to point at home office api correct PR. Adding comment for clarification

* DIAC-211 reverting preview image

---------

Co-authored-by: KleoG <KleoG@users.noreply.github.com>

* RIA-6987 Changes to add cache (#1358)

* Changes to add cache

* vulnerability issue fixed

* changes for cache

* CVEs suppressed

* CVEs Suppression

* test class updated

* Changes for testing issue

* Revert the change

* Changes for CheckStyle issue

* service auth stub added

* Test case updated

* Test case updated

* reverted the change

* Changes in test case

* Changes in test case

* Changes in test case

* Changes in test case

* Reverted the changes

* Changes to clear existing user stub

* RIA-6987 Tracing stubs on failing test

* RIA-6987 Tracing stubs on failing test

* Revert "RIA-6987 Tracing stubs on failing test"

This reverts commit 027f5c9df49312b04bafdfb7f22c9ead7f3eaa6e.

* Revert "RIA-6987 Tracing stubs on failing test"

This reverts commit b3078d102a28a5088fa6268285b6ae7fdc8aa296.

* RIA-6987 Removal of pointless Checkstyle rules

* RIA-6987 Fix for random test execution order causing problems

* RIA-6987 Fixing botched merge

* merge issue fixed

* chart version updated

* RIA-6987 - idamapi userinfo is now being cached so will not be called twice here

* Cache config

* Cache config

* Preview PRs

* Revert preview images

---------

Co-authored-by: Filippo Possenti <filippo.possenti@version1.com>
Co-authored-by: filippo-possenti-version1 <109352283+filippo-possenti-version1@users.noreply.gi